--- a/languoids/tree/atla1278/volt1241/benu1247/delt1251/obol1242/cent2253/efik1244/md.ini
+++ b/languoids/tree/atla1278/volt1241/benu1247/delt1251/obol1242/cent2253/efik1244/md.ini
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 [core]
-name = Efik-Ibibio
+name = Ibibio-Efik
 level = family
 
 [classification]
@@ -9,5 +9,5 @@ subrefs =
 	**hh:hv:Connell:Cross-River**
 
 [identifier]
-languagelandscape = http://languagelandscape.org/language/Efik-Ibibio
+languagelandscape = http://languagelandscape.org/language/Ibibio-Efik
 
